--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,56 +1,71 @@
 ---
-import 'aos/dist/aos.css';
+import "aos/dist/aos.css";
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
-		<meta name="generator" content={Astro.generator} />
-		<meta name="description" content="Logra que tus áreas de marketing, ventas y tecnología trabajen en armonía. Te ayudamos a organizarlas y alinearlas para que tu empresa crezca de forma rentable y sostenible. Si quieres vender más en canales digitales, contáctanos." />
-		<meta name="robots" content="index, follow" />
-		<meta name="keywords" content="marketing, ventas, tecnología, Dugalu" />
-		<meta name="author" content="Dugalu" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <meta name="generator" content={Astro.generator} />
+    <meta
+      name="description"
+      content="Logra que tus áreas de marketing, ventas y tecnología trabajen en armonía. Te ayudamos a organizarlas y alinearlas para que tu empresa crezca de forma rentable y sostenible. Si quieres vender más en canales digitales, contáctanos."
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="keywords" content="marketing, ventas, tecnología, Dugalu" />
+    <meta name="author" content="Dugalu" />
 
-		<meta property="og:title" content="Dugalu | Marketing + Ventas + Tecnología" />
-		<meta property="og:description" content="Logra que tus áreas de marketing, ventas y tecnología trabajen en armonía. Te ayudamos a organizarlas y alinearlas para que tu empresa crezca de forma rentable y sostenible. Si quieres vender más en canales digitales, contáctanos." />
-		<meta property="og:image" content="https://dugalu.vercel.app/favicon.png" />
-		<meta property="og:type" content="website" />
-		
-		<title>Dugalu | Marketing + Ventas + Tecnología</title>
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    <meta
+      property="og:title"
+      content="Dugalu | Marketing + Ventas + Tecnología"
+    />
+    <meta
+      property="og:description"
+      content="Logra que tus áreas de marketing, ventas y tecnología trabajen en armonía. Te ayudamos a organizarlas y alinearlas para que tu empresa crezca de forma rentable y sostenible. Si quieres vender más en canales digitales, contáctanos."
+    />
+    <meta property="og:image" content="https://dugalu.vercel.app/favicon.png" />
+    <meta property="og:type" content="website" />
 
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-BP1YFXNGZ8"></script>
-		<script is:inline>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
+    <title>Dugalu | Marketing + Ventas + Tecnología</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-			gtag('config', 'G-BP1YFXNGZ8');
-		</script>
-	</head>
-	<body>
-		<slot />
-		<script>
-			import AOS from "aos";
-			AOS.init();
-		</script>
-	</body>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BP1YFXNGZ8"
+    ></script>
+    <script is:inline>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-BP1YFXNGZ8");
+    </script>
+  </head>
+  <body>
+    <slot />
+    <script>
+      import AOS from "aos";
+      AOS.init();
+    </script>
+  </body>
 </html>
 
 <style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+  html,
+  body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+  }
 
-	*{
-		font-family: 'Mulish', sans-serif;
-	}
+  * {
+    font-family: "Montserrat", sans-serif;
+  }
 </style>
