Refactor code structure for improved readability and maintainability

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -33,7 +33,7 @@ import Modal from "./Modal.astro";
   </video>
 
   <section data-aos="fade-up" data-aos-duration="2000" id="hero">
-    <img src={dugaluLogo.src} width="145" alt="Dugalu Icon" />
+    <img src={dugaluLogo.src} height="49" alt="Dugalu Icon" />
     <div></div>
     <h1>
       A MARKETING AND SALES <span>INNOVATION COMPANY</span> DESIGNED TO DRIVE GROWTH
@@ -263,16 +263,12 @@ import Modal from "./Modal.astro";
       <div class="col">
         <div class="sec">
           <div class="item">
-            <span>Contáctanos: </span>ntorres@dugalu.com
+            <span>Contáctanos:</span> ntorres@dugalu.com
           </div>
-          <div class="item">
-            <span>Teléfono: </span>+573107967925
-          </div>
+          <div class="item">Teléfono: +573107967925</div>
         </div>
         <div class="sec">
-          <div class="item">
-            <span>Carrera 59 # 152-19 Piso 3</span>
-          </div>
+          <div class="item">Carrera 59 # 152-19 Piso 3</div>
           <div class="item">Bogotá - Colombia</div>
         </div>
       </div>
