--- a/src/styles/Welcome.scss
+++ b/src/styles/Welcome.scss
@@ -135,7 +135,7 @@ header {
     font-size: clamp(0.9rem, 2.5vw, 1.05rem);
     line-height: 1.2;
     letter-spacing: 0em;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Mulish", sans-serif;
   }
 }
 
@@ -166,7 +166,7 @@ header {
     color: white;
     max-width: 1400px;
     height: 100%;
-    padding: 7% 7% 5% 7%;
+    padding: 5% 7%;
     width: 100%;
     @media (max-width: 768px) {
       padding: 10% 7%;
