--- a/src/styles/Welcome.scss
+++ b/src/styles/Welcome.scss
@@ -166,7 +166,7 @@ header {
     color: white;
     max-width: 1400px;
     height: 100%;
-    padding: 5% 7%;
+    padding: 4% 7% 7% 7%;
     width: 100%;
     @media (max-width: 768px) {
       padding: 10% 7%;
@@ -186,7 +186,7 @@ header {
       text-align: left;
       max-width: 1100px;
       margin-top: 95px !important;
-      font-weight: 700;
+      font-weight: 800;
       span {
         color: $primary-color;
       }
