--- a/src/styles/Welcome.scss
+++ b/src/styles/Welcome.scss
@@ -256,7 +256,7 @@ header {
           color: $primary-color;
           font-size: clamp(1.5rem, 4vw, 2rem);
           letter-spacing: -0.05em;
-          min-height: 63px; // Altura mínima para los títulos
+          min-height: 55px; // Altura mínima para los títulos
           @media (max-width: 768px) {
             min-height: auto;
           }
@@ -283,7 +283,7 @@ header {
           letter-spacing: 0em;
           width: 97%;
           font-family: $font-satoshi;
-          margin-top: 10px;
+          margin-top: 10px !important;
         }
       }
     }
