Adjust logo size and footer padding for improved layout consistency

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -252,7 +252,12 @@ import Modal from "./Modal.astro";
   </video>
 
   <div class="content">
-    <img src={dugaluWhiteLogo.src} width="120" alt="Dugalu" />
+    <img
+      class="dugalu-logo"
+      src={dugaluWhiteLogo.src}
+      height="40"
+      alt="Dugalu"
+    />
 
     <div class="footer-items">
       <h4>
