--- a/src/styles/Welcome.scss
+++ b/src/styles/Welcome.scss
@@ -444,11 +444,14 @@ footer {
     color: white;
     max-width: 1400px;
     height: 100%;
-    padding: 10% 7%;
+    padding: 11% 7%;
     margin: 0 auto;
     gap: 50px;
     width: 100%;
     height: 100%;
+    .dugalu-logo {
+      width: fit-content;
+    }
     .footer-items {
       display: flex;
       flex-direction: row;
@@ -492,7 +495,7 @@ footer {
       }
       h4 {
         font-weight: 800;
-        font-size: clamp(1.5rem, 2vw, 2rem);
+        font-size: clamp(1.6rem, 2vw, 2.1rem);
         line-height: 1.15;
         letter-spacing: -0.02em;
         max-width: 550px;
