--- a/src/styles/Welcome.scss
+++ b/src/styles/Welcome.scss
@@ -451,6 +451,7 @@ footer {
     height: 100%;
     .dugalu-logo {
       width: fit-content;
+      margin-top: 5px;
     }
     .footer-items {
       display: flex;
