Replace dugalu-white.png with dugalu-white.svg and adjust footer logo margin for improved layout consistency

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,6 +1,6 @@
 ---
 import dugaluLogo from "../assets/icons/dugalu.png";
-import dugaluWhiteLogo from "../assets/icons/dugalu-white.png";
+import dugaluWhiteLogo from "../assets/icons/dugalu-white.svg";
 import backgroundVideo from "../assets/videos/banner-video.mp4";
 import adea from "../assets/images/clients/adea.png";
 import detektor from "../assets/images/clients/detektor.png";
