Set width for Dugalu logo in Welcome component for improved layout consistency

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -256,6 +256,7 @@ import Modal from "./Modal.astro";
       class="dugalu-logo"
       src={dugaluWhiteLogo.src}
       height="30"
+      width="100"
       alt="Dugalu"
     />
 
