Update service description for clarity and correct phone number in Welcome component

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -48,7 +48,7 @@ import Modal from "./Modal.astro";
     <div data-aos="fade-right" class="message">
       <h2>Nuestros Servicios</h2>
       <h3>
-        Integramos comunicación y tecnología para impulsar valor e impacto en
+        Integramos comunicación y tecnología para generar valor e impacto en
         personas y marcas.
       </h3>
     </div>
@@ -74,10 +74,10 @@ import Modal from "./Modal.astro";
           </video>
         </div>
         <h4>
-          Creamos campañas publicitarias dirigidas en redes sociales para
-          aumentar la visibilidad de tu marca, conectar con tu audiencia e
-          impulsar las conversiones. Nuestro equipo optimiza cada campaña para
-          asegurar el máximo retorno de la inversión (ROI).
+          Creamos campañas publicitarias en redes sociales para aumentar la
+          visibilidad de tu marca, conectar con tu audiencia e impulsar las
+          conversiones. Nuestro equipo optimiza cada campaña para asegurar el
+          máximo retorno de la inversión (ROI).
         </h4>
       </div>
 
@@ -271,7 +271,7 @@ import Modal from "./Modal.astro";
           <div class="item">
             <span>Contáctanos:</span> ntorres@dugalu.com
           </div>
-          <div class="item">Teléfono: +573107967925</div>
+          <div class="item">Teléfono: +573025639562</div>
         </div>
         <div class="sec">
           <div class="item">Carrera 59 # 152-19 Piso 3</div>
