Refactor code structure for improved readability and maintainability

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,5 +1,5 @@
 ---
-import dugaluLogo from "../assets/icons/dugalu.svg";
+import dugaluLogo from "../assets/icons/dugalu.png";
 import dugaluWhiteLogo from "../assets/icons/dugalu-white.svg";
 import backgroundVideo from "../assets/videos/banner-video.mp4";
 import adea from "../assets/images/clients/adea.png";
