--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import "aos/dist/aos.css";
-import ogImage from "../assets/images/og-image.png";
+import ogImage from "../assets/images/og-image.jpeg";
 ---
 
 <!doctype html>
